fixed spacing on guide templ

--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -659,6 +659,10 @@ video {
   display: inline-flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
@@ -755,6 +759,10 @@ video {
   flex-shrink: 0;
 }
 
+.table-auto {
+  table-layout: auto;
+}
+
 .cursor-default {
   cursor: default;
 }
@@ -829,6 +837,18 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
 .overflow-x-auto {
   overflow-x: auto;
 }
@@ -837,12 +857,24 @@ video {
   white-space: pre;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .border-4 {
   border-width: 4px;
 }
 
 .border-\[6px\] {
   border-width: 6px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b-8 {
@@ -947,6 +979,16 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -975,12 +1017,24 @@ video {
   padding-top: 0.75rem;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
 .font-primary {
   font-family: "JetBrains Mono";
 }
 
 .font-secondary {
   font-family: "Press Start 2P";
+}
+
+.font-\[\'JetBrains_Mono\'\] {
+  font-family: 'JetBrains Mono';
 }
 
 .text-\[0\.675rem\] {
@@ -1285,6 +1339,16 @@ body::before {
 
   .md\:p-10 {
     padding: 2.5rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:pb-2 {
